<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivityFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="0dp"
        android:background="#ffffff" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dip" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/placeholder"
                android:id="@+id/movieTitleText"
                android:padding="10dp"
                android:textColor="@color/white_color"
                android:textStyle="bold"
                android:textSize="@dimen/detail_text_size"
                android:background="#29a89e"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="@dimen/poster_height"
                    android:layout_marginTop="5dp"
                    android:id="@+id/movieImage"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/placeholder"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/some_date"
                        android:id="@+id/movieRelease"
                        android:textColor="@color/text_color"
                        android:layout_marginStart="10dp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/voteAvg"
                        android:text="@string/vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/text_color"
                        android:layout_marginStart="10dp"
                        android:visibility="visible"/>

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/movieOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/para"
                android:textColor="@color/text_color"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="@dimen/detail_para_padding"
                />



        </LinearLayout>
    </ScrollView>

</LinearLayout>
